Adds entry about 'supermicro-ipmi-conf' in the CHANGELOG.
git-svn-id: https://svn.nmap.org/nmap@33548 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added the script supermicro-ipmi-conf to exploit Supermicro IPMI/BMC
+  controllers. [Paulino Calderon]
+
 o [NSE] Added mikrotik-routeros-brute script to perform password auditing 
   attacks against Mikrotik's RouterOS API. [Paulino Calderon]
 
