--- a/ncat/docs/ncat.1
+++ b/ncat/docs/ncat.1
@@ -2,12 +2,12 @@
 .\"     Title: Ncat
 .\"    Author: [see the "Authors" section]
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 08/13/2014
+.\"      Date: 08/29/2014
 .\"    Manual: Ncat Reference Guide
 .\"    Source: Ncat
 .\"  Language: English
 .\"
-.TH "NCAT" "1" "08/13/2014" "Ncat" "Ncat Reference Guide"
+.TH "NCAT" "1" "08/29/2014" "Ncat" "Ncat Reference Guide"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -43,7 +43,7 @@ Among Ncat\*(Aqs vast number of features there is the ability to chain Ncats tog
 .RS 4
 .\}
 .nf
-Ncat 6\&.46 ( http://nmap\&.org/ncat )
+Ncat 6\&.47SVN ( http://nmap\&.org/ncat )
 Usage: ncat [options] [hostname] [port]
 
 Options taking a time assume seconds\&. Append \*(Aqms\*(Aq for milliseconds,
@@ -114,7 +114,9 @@ arguments tell what to connect to\&.
 \fB\fIhostname\fR\fR
 is required, and may be a hostname or IP address\&. If
 \fB\fIport\fR\fR
-is supplied, it must be a decimal port number\&. If omitted, it defaults to 31337\&..\" default port of Ncat.\" 31337
+is supplied, it must be a decimal port number\&. If omitted, it defaults to 31337\&.
+.\" default port of Ncat
+.\" 31337
 .PP
 In listen mode,
 \fB\fIhostname\fR\fR
@@ -236,13 +238,15 @@ In client mode,
 is like
 \fB\-\-ssl\fR
 except that it also requires verification of the server certificate\&. Ncat comes with a default set of trusted certificates in the file
-ca\-bundle\&.crt.\" ca-bundle.crt\&. Some operating systems provide a default list of trusted certificates; these will also be used if available\&. Use
+ca\-bundle\&.crt
+.\" ca-bundle.crt\&. Some operating systems provide a default list of trusted certificates; these will also be used if available\&. Use
 \fB\-\-ssl\-trustfile\fR
 to give a custom list\&. Use
 \fB\-v\fR
 one or more times to get details about verification failures\&.
 .\" revoked certificates
-Ncat does not check for revoked certificates.\" certification revocation\&.
+Ncat does not check for revoked certificates
+.\" certification revocation\&.
 .sp
 This option has no effect in server mode\&.
 .RE
@@ -262,7 +266,8 @@ This option gives the location of the PEM\-encoded private key file that goes wi
 \fB\-\-ssl\-trustfile \fR\fB\fIcert\&.pem\fR\fR (List trusted certificates) .\" --ssl-trustfile (Ncat option)
 .RS 4
 This option sets a list of certificates that are trusted for purposes of certificate verification\&. It has no effect unless combined with
-\fB\-\-ssl\-verify\fR\&. The argument to this option is the name of a PEM.\" PEM (Privacy Enhanced Mail)
+\fB\-\-ssl\-verify\fR\&. The argument to this option is the name of a PEM
+.\" PEM (Privacy Enhanced Mail)
 file containing trusted certificates\&. Typically, the file will contain certificates of certification authorities, though it may also contain server certificates directly\&. When this option is used, Ncat does not use its default certificates\&.
 .RE
 .SH "PROXY OPTIONS"
@@ -439,9 +444,12 @@ and it will be verbose and display all kinds of useful connection based informat
 .PP
 \fB\-C\fR, \fB\-\-crlf\fR (Use CRLF as EOL) .\" --crlf (Ncat option) .\" -C (Ncat option)
 .RS 4
-This option tells Ncat to convert LF.\" LF line ending
-line endings to CRLF.\" CRLF line ending
-when taking input from standard input\&..\" standard input
+This option tells Ncat to convert LF
+.\" LF line ending
+line endings to CRLF
+.\" CRLF line ending
+when taking input from standard input\&.
+.\" standard input
 This is useful for talking to some stringent servers directly from a terminal in one of the many common plain\-text protocols that use CRLF for end\-of\-line\&.
 .RE
 .PP
@@ -640,7 +648,8 @@ Source is provided to this software because we believe users have a right to kno
 .PP
 Source code also allows you to port Nmap (which includes Ncat) to new platforms, fix bugs, and add new features\&. You are highly encouraged to send your changes to
 <dev@nmap\&.org>
-for possible incorporation into the main distribution\&. By sending these changes to Fyodor or one of the Insecure\&.Org development mailing lists, it is assumed that you are offering the Nmap Project (Insecure\&.Com LLC) the unlimited, non\-exclusive right to reuse, modify, and relicense the code\&. Nmap will always be available open source,.\" open source
+for possible incorporation into the main distribution\&. By sending these changes to Fyodor or one of the Insecure\&.Org development mailing lists, it is assumed that you are offering the Nmap Project (Insecure\&.Com LLC) the unlimited, non\-exclusive right to reuse, modify, and relicense the code\&. Nmap will always be available open source,
+.\" open source
 but this is important because the inability to relicense code has caused devastating problems for other Free Software projects (such as KDE and NASM)\&. We also occasionally relicense the code to third parties as discussed in the Nmap man page\&. If you wish to specify special license conditions of your contributions, just say so when you send them\&.
 .SS "No Warranty.\" warranty (lack of)"
 .PP
@@ -650,20 +659,26 @@ COPYING
 file included with Nmap\&.
 .SS "Inappropriate Usage"
 .PP
-Ncat should never be installed with special privileges (e\&.g\&. suid root)\&..\" suid
+Ncat should never be installed with special privileges (e\&.g\&. suid root)\&.
+.\" suid
 That would open up a major security vulnerability as other users on the system (or attackers) could use it for privilege escalation\&.
 .SS "Third\-Party Software"
 .PP
 This product includes software developed by the
 \m[blue]\fBApache Software Foundation\fR\m[]\&\s-2\u[2]\d\s+2\&. A modified version of the
-\m[blue]\fBLibpcap portable packet capture library\fR\m[]\&\s-2\u[3]\d\s+2.\" libpcap
+\m[blue]\fBLibpcap portable packet capture library\fR\m[]\&\s-2\u[3]\d\s+2
+.\" libpcap
 is distributed along with Ncat\&. The Windows version of Ncat utilized the Libpcap\-derived
-\m[blue]\fBWinPcap library\fR\m[]\&\s-2\u[4]\d\s+2.\" WinPcap
+\m[blue]\fBWinPcap library\fR\m[]\&\s-2\u[4]\d\s+2
+.\" WinPcap
 instead\&. Certain raw networking functions use the
-\m[blue]\fBLibdnet\fR\m[]\&\s-2\u[5]\d\s+2.\" libdnet
-networking library, which was written by Dug Song\&..\" Song, Dug
+\m[blue]\fBLibdnet\fR\m[]\&\s-2\u[5]\d\s+2
+.\" libdnet
+networking library, which was written by Dug Song\&.
+.\" Song, Dug
 A modified version is distributed with Ncat\&. Ncat can optionally link with the
-\m[blue]\fBOpenSSL cryptography toolkit\fR\m[]\&\s-2\u[6]\d\s+2.\" OpenSSL
+\m[blue]\fBOpenSSL cryptography toolkit\fR\m[]\&\s-2\u[6]\d\s+2
+.\" OpenSSL
 for SSL version detection support\&. All of the third\-party software described in this paragraph is freely redistributable under BSD\-style software licenses\&.
 .SH "NOTES"
 .IP " 1." 4
