--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Improved http-form-brute autodetection and behavior to handle more
+  unusual-but-valid HTML syntax, non-POST forms, success/failure testing on
+  HTTP headers, and more. [nnposter]
+
 o [NSE] Add port.reason_ttl, host.reason, host.reason_ttl for use in scripts
   [Jay Bosamiya]
 
