New docker-version script
http://seclists.org/nmap-dev/2014/q3/265

git-svn-id: https://svn.nmap.org/nmap@33704 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added docker-version script for detecting Docker [Claudio Criscione]
+
 o [NSE] Improved http-form-brute autodetection and behavior to handle more
   unusual-but-valid HTML syntax, non-POST forms, success/failure testing on
   HTTP headers, and more. [nnposter]
