Adds http-avaya-ipoffice-users.nse to enumerate user information such as extension display name, full name and extension number in Avaya IP Office systems.
git-svn-id: https://svn.nmap.org/nmap@33739 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added http-avaya-ipoffice-users script to enumerate users in Avaya 
+  IP Office 7.x systems. [Paulino Calderon]
+
 o [NSE] Added docker-version script for detecting Docker [Claudio Criscione]
 
 o [NSE] Improved http-form-brute autodetection and behavior to handle more
