Fixed a bug in the sslcert.lua library that was triggered against certain services when version detection was used.
http://seclists.org/nmap-dev/2014/q4/110

git-svn-id: https://svn.nmap.org/nmap@33757 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Fixed a bug in the sslcert.lua library that was triggered against
+  certain services when version detection was used. [Tom Sellers]
+  
 o [NSE] Added ssl-poodle to detect CVE-2014-3566 [Daniel Miller]
 
 o [NSE] vulns.Report:make_output() now generates XML structured output 
