Add the signature algorithm that was used to sign the target port's x509  (TLS) certificate to the output of ssl-cert.nse
http://seclists.org/nmap-dev/2014/q4/44

git-svn-id: https://svn.nmap.org/nmap@33758 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Add the signature algorithm that was used to sign the target port's 
+  x509 certificate to the output of ssl-cert.nse [Tom Sellers]
+
 o [NSE] Fixed a bug in the sslcert.lua library that was triggered against
   certain services when version detection was used. [Tom Sellers]
   
