--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Rework ssl-enum-ciphers to actually score the strength of the SSL/TLS
+  handshake, including certificate key size and DH parameters if applicable.
+  This is similar to Qualys's SSL Labs scanner, and means that we no longer
+  maintain a list of scores per ciphersuite. [Daniel Miller]
+
 o [NSE] Add the signature algorithm that was used to sign the target port's 
   x509 certificate to the output of ssl-cert.nse [Tom Sellers]
 
