Update it.po: http://seclists.org/nmap-dev/2014/q4/230
git-svn-id: https://svn.nmap.org/nmap@33825 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/zenmap/share/zenmap/locale/it.po
+++ b/zenmap/share/zenmap/locale/it.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: Zenmap\n"
 "Report-Msgid-Bugs-To: dev@nmap.org\n"
 "POT-Creation-Date: 2014-10-23 15:14+0000\n"
-"PO-Revision-Date: 2013-04-01 13:00+0100\n"
-"Last-Translator: Francesco Tombolini <tombo@adamantio.net>\n"
+"PO-Revision-Date: 2014-11-20 16:37+0100\n"
+"Last-Translator: blau <blau@anche.no>\n"
 "Language-Team: \n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -245,6 +245,9 @@ msgid ""
 "file:\n"
 "                            %s"
 msgstr ""
+"                            Questo errore si è verificato cercando di aprire "
+"il file:\n"
+"                            %s"
 
 #: zenmapGUI/DiffCompare.py:314 zenmapGUI/MainWindow.py:341
 msgid "Compare Results"
@@ -537,6 +540,8 @@ msgid ""
 "The window you are trying to close has a scan running in the background.\n"
 "What do you want to do?"
 msgstr ""
+"la finestra che stai chiudendo ha una scansione in corso in background.\n"
+"Cosa vuoi fare?"
 
 #: zenmapGUI/MainWindow.py:946
 msgid "Can't find documentation files"
@@ -561,6 +566,9 @@ msgid ""
 "exist. Please check the profile name or type the nmap command you would like "
 "to execute."
 msgstr ""
+"Non ci sono comandi da eseguire. Forse il profilo che hai scelto o scritto "
+"non esiste. Controlla il nome del profilo o scrivi i comandi nmap che "
+"vorresti eseguire."
 
 #: zenmapGUI/ScanInterface.py:543
 msgid ""
@@ -607,13 +615,13 @@ msgid "Cannot merge scan"
 msgstr "Impossibile incorporare scansione"
 
 #: zenmapGUI/ScanInterface.py:649
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "There was an error while merging the new scan's XML:\n"
 "\n"
 "%s"
 msgstr ""
-"Si è verificato un errore durante l'analisi del file XML generato dalla "
+"Si è verificato un errore durante il merge del file XML generato dalla "
 "scansione:\n"
 "\n"
 "%s"
@@ -742,6 +750,10 @@ msgid ""
 "select a method by choosing a directory or by checking the search data base "
 "option in the 'Search options' tab before starting a search"
 msgstr ""
+"%s può ricercare risultati nelle directory o nel suo database interno. "
+"Scegli uno dei due modi selezionando una directory o spintando l'opzione "
+"ricerca nel database all'interno della scheda 'Opzioni di ricerca' prima di "
+"iniziare la ricerca"
 
 #: zenmapGUI/SearchGUI.py:958
 msgid ""
@@ -1176,6 +1188,8 @@ msgid ""
 "Your profile is going to be deleted! ClickOk to continue, or Cancel to go "
 "back to Profile Editor."
 msgstr ""
+"Il tuo profilo sta per essere cancellato! Fai clic su OK per continuare, o "
+"Annulla per tornare all'Editor del Profilo."
 
 #: zenmapGUI/SearchWindow.py:148
 msgid "Search Scans"
