Update de.po: http://seclists.org/nmap-dev/2014/q4/235
git-svn-id: https://svn.nmap.org/nmap@33826 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/zenmap/share/zenmap/locale/de.po
+++ b/zenmap/share/zenmap/locale/de.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: nmap 6.47\n"
 "Report-Msgid-Bugs-To: dev@nmap.org\n"
 "POT-Creation-Date: 2014-10-23 15:14+0000\n"
-"PO-Revision-Date: 2014-09-27 19:07+0100\n"
+"PO-Revision-Date: 2014-11-20 22:42+0100\n"
 "Last-Translator: Chris Leick <c.leick@vollbio.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "Language: de\n"
@@ -251,6 +251,8 @@ msgid ""
 "file:\n"
 "                            %s"
 msgstr ""
+"                            Dieser Fehler trat beim Öffnen der Datei auf:\n"
+"                            %s"
 
 #: zenmapGUI/DiffCompare.py:314 zenmapGUI/MainWindow.py:341
 msgid "Compare Results"
@@ -542,6 +544,8 @@ msgid ""
 "The window you are trying to close has a scan running in the background.\n"
 "What do you want to do?"
 msgstr ""
+"In dem Fenster, das Sie schließen möchten, läuft im Hintergrund ein Scan.\n"
+"Was wollen Sie tun?"
 
 #: zenmapGUI/MainWindow.py:946
 msgid "Can't find documentation files"
@@ -566,6 +570,9 @@ msgid ""
 "exist. Please check the profile name or type the nmap command you would like "
 "to execute."
 msgstr ""
+"Es ist kein Befehl auszuführen. Vielleicht existiert das ausgewählte/"
+"eingegebene Profil nicht. Bitte prüfen Sie den Namen des Profils oder geben "
+"Sie den Namen des Nmap-Befehls ein, den Sie ausführen möchten."
 
 #: zenmapGUI/ScanInterface.py:543
 msgid ""
@@ -748,6 +755,10 @@ msgid ""
 "select a method by choosing a directory or by checking the search data base "
 "option in the 'Search options' tab before starting a search"
 msgstr ""
+"%s kann Ergebnisse in Verzeichnissen oder innerhalb seiner eigenen Datenbank "
+"suchen. Bitte wählen Sie durch Auswahl eines Verzeichnisses oder durch "
+"Anhaken der Option Datenbanksuche im Reiter »Suchoptionen« eine Methode aus, "
+"bevor Sie mit der Suche beginnen."
 
 #: zenmapGUI/SearchGUI.py:958
 msgid ""
@@ -1184,6 +1195,8 @@ msgid ""
 "Your profile is going to be deleted! ClickOk to continue, or Cancel to go "
 "back to Profile Editor."
 msgstr ""
+"Ihr Profil wird gelöscht. Klicken Sie Ok zum Fortfahren oder auf Abbrechen, "
+"um zurück zum Profileditor zu gehen."
 
 #: zenmapGUI/SearchWindow.py:148
 msgid "Search Scans"
