--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,7 @@
 
 o [NSE] Added targets-ipv6-recon-map4to6 to generate target IPv6 addresses
   which correspond to IPv4 addresses mapped within a particular IPv6 subnet.
-  [Raul Fuentes]
+  [Raúl Fuentes]
 
 o [NSE] Updated our Wordpress plugin list to improve the
   http-wordpress-plugins NSE script. We can now detect 34,077 plugins,
