Another Raul Fuentes script: targets-ipv6-wordlist
git-svn-id: https://svn.nmap.org/nmap@33857 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
-o [NSE] Added targets-ipv6-recon-map4to6 to generate target IPv6 addresses
+o [NSE] Added targets-ipv6-wordlist to generate target IPv6 addresses
+  from a wordlist made of hexadecimal characters.  [Raúl Fuentes]
+
+o [NSE] Added targets-ipv6-map4to6 to generate target IPv6 addresses
   which correspond to IPv4 addresses mapped within a particular IPv6 subnet.
   [Raúl Fuentes]
 
