Add support to 'citrix-enum-apps-xml' for reporting if published applications in the list are enforcing/requiring the level of ICA/session data encryption shown in the script result.  This information was already in the XML provided by the server, this change just adds parsing for it.
git-svn-id: https://svn.nmap.org/nmap@33869 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Add support to citrix-enum-apps-xml for reporting if Citrix 
+   published applications in the list are enforcing/requiring the level 
+   of ICA/session data encryption shown in the script result.  
+   [Tom Sellers]
+   
 o [NSE] Added targets-ipv6-wordlist to generate target IPv6 addresses
   from a wordlist made of hexadecimal characters.  [Raúl Fuentes]
 
