Update changelog regarding translations
git-svn-id: https://svn.nmap.org/nmap@33885 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [Zenmap] Updated translations for German (de, Chris Leick), Italian (it, Jan
+  Reister), Polish (pl, Jacek Wielemborek), and French (fr, MaZ)
+
+o [Zenmap] New Chinese-language (zh) translation from Jie Jiang.
+
 o [NSE] Added snmp-info to get the enterprise number and other information from
   the snmpEngineID in an SNMPv3 response packet. [Daniel Miller]
 
