Add a new service probe for Tor.
http://seclists.org/nmap-dev/2015/q1/39

git-svn-id: https://svn.nmap.org/nmap@33912 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Added a version probe for Tor. [David Fifield]
+
 o [Zenmap] Updated translations for German (de, Chris Leick), Italian (it, Jan
   Reister), Polish (pl, Jacek Wielemborek), and French (fr, MaZ)
 
