Update location of fingerprint submitter.
git-svn-id: https://svn.nmap.org/nmap@34012 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Change the URI for the fingerprint submitter to its new location at
+  https://nmap.org/cgi-bin/submit.cgi
+
 o [Zenmap] Added new Hindi (hi) translation by Gyanendra Mishra.
 
 o [NSE] Added a new version of http-wordpress-enum, it now enumerates
