Fix WinPcap crash on pcap_findalldevs error
See http://seclists.org/nmap-dev/2015/q1/176

Fixes #15

git-svn-id: https://svn.nmap.org/nmap@34013 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Solve a crash on Windows 8.1 on Surface Pro 3 caused by WinPcap trying to
+  write an error message to a NULL pointer. [Peter Malecka]
+
 o Change the URI for the fingerprint submitter to its new location at
   https://nmap.org/cgi-bin/submit.cgi
 
