Fixed a TOCTOU race in mmapfile()
Let open() fail in case of a missing file, then use fstat on the
returned file descriptor to get the actual file size.

Reported by Camille Mougey.

git-svn-id: https://svn.nmap.org/nmap@34051 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Fixed a benign TOCTOU race between stat() and open() in mmapfile().
+  Reported by Camille Mougey. [Henri Doreau]
+
 o Reduce CPU consumption when using nsock poll engine with no registered FD,
   by actually calling Poll() for the time until timeout, instead of directly
   returning zero and entering the loop again. [Henri Doreau]
