--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added http-crossdomainxml to detect overly permissive crossdomain 
+  policies and find trusted domain names available for purchase. [Paulino Calderon]
+
 o Add IPv6 Hop Limit (similar to IPv4 TTL) as a feature for the IPv6 OS
   fingerprinting engine. [Alexandru Geana]
 
