--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
-o [NSE] Added http-crossdomainxml to detect overly permissive crossdomain 
+o [NSE] Fix X509 cert date parsing for dates after 2049. Reported by Teppo
+  Turtiainen. [Daniel Miller]
+
+o [NSE] Added http-crossdomainxml to detect overly permissive crossdomain
   policies and find trusted domain names available for purchase. [Paulino Calderon]
 
 o Add IPv6 Hop Limit (similar to IPv4 TTL) as a feature for the IPv6 OS
