Added http-vuln-cve2015-1427 to CHANGELOG
git-svn-id: https://svn.nmap.org/nmap@34510 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added http-vuln-cve2015-1427 to detect Elasticsearch servers
+  vulnerable to remote code execution. [Gyanendra Mishra]
+
 o [NSE] Added http-vuln-cve2015-1635 to detect Microsoft Windows systems 
   vulnerable to MS15-034. [Paulino Calderon]
 
